Final changes in prep for Hot Ink version 0.2

--- a/app/views/circulation/user_activation_instructions.text.plain.erb
+++ b/app/views/circulation/user_activation_instructions.text.plain.erb
@@ -5,7 +5,7 @@ Congratulations, you've been granted access to Canadian University Press's
 web-publishing and newswire software, known as Hot Ink. 
 
 For now, you'll be able to log in, view, edit and upload articles, media or
-print issues for your campus paper. If appropriate one of your Account Managers 
+print issues for your campus paper. If appropriate, one of your Account Managers 
 can give you access to the management interface of the system. If you think that 
 you should be an Account Manager, but after logging in you find you don't have 
 access to your account's management interface, please email chris@hotink.net.
